<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <parent>
    <groupId>io.camunda</groupId>
    <artifactId>zeebe-parent</artifactId>
    <version>8.6.0-SNAPSHOT</version>
    <relativePath>../parent/pom.xml</relativePath>
  </parent>

  <artifactId>operate-parent</artifactId>
  <packaging>pom</packaging>

  <name>Operate Parent</name>

  <modules>
    <module>client</module>
    <module>common</module>
    <module>schema</module>
    <module>data-generator</module>
    <module>importer-common</module>
    <module>importer-8_5</module>
    <module>importer-8_6</module>
    <module>importer</module>
    <module>archiver</module>
    <module>webapp</module>
    <module>mvc-auth-commons</module>
  </modules>

  <properties>

    <!-- release parent settings -->
    <nexus.snapshot.repository>https://artifacts.camunda.com/artifactory/camunda-operate-snapshots/</nexus.snapshot.repository>
    <nexus.release.repository>https://artifacts.camunda.com/artifactory/camunda-operate/</nexus.release.repository>

    <maven.compiler.target>21</maven.compiler.target>
    <maven.compiler.source>21</maven.compiler.source>

    <license.header>${maven.multiModuleProjectDirectory}/license/license-header</license.header>

    <skip.fe.build>false</skip.fe.build>
    <skipSurefire>false</skipSurefire>
    <failsafeForkCount>${env.LIMITS_CPU}</failsafeForkCount>

    <includeITNames>**/*IT.java</includeITNames>
    <excludeITNames>**/OpenSearch*IT.java, **/Opensearch*IT.java</excludeITNames>
  </properties>

  <build>
    <pluginManagement>
      <plugins>

        <plugin>
          <groupId>com.github.eirslett</groupId>
          <artifactId>frontend-maven-plugin</artifactId>
          <version>1.15.0</version>
        </plugin>

        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-source-plugin</artifactId>
          <version>3.3.0</version>
        </plugin>

        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-javadoc-plugin</artifactId>
          <version>3.6.3</version>
          <configuration>
            <skip>true</skip>
          </configuration>
        </plugin>

        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-surefire-plugin</artifactId>
          <version>3.2.5</version>
          <configuration>
            <skip>${skipSurefire}</skip>
            <forkCount>${failsafeForkCount}</forkCount>
            <reuseForks>true</reuseForks>
            <redirectTestOutputToFile>true</redirectTestOutputToFile>
            <systemPropertyVariables>
              <testForkNumber>$${surefire.forkNumber}</testForkNumber>
            </systemPropertyVariables>
          </configuration>
        </plugin>

        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-failsafe-plugin</artifactId>
          <version>3.2.5</version>
          <configuration>
            <includes>
              <include>${includeITNames}</include>
            </includes>
            <excludes>
              <exclude>${excludeITNames}</exclude>
            </excludes>
            <forkCount>${failsafeForkCount}</forkCount>
            <reuseForks>true</reuseForks>
            <redirectTestOutputToFile>true</redirectTestOutputToFile>
            <systemPropertyVariables>
              <testForkNumber>$${surefire.forkNumber}</testForkNumber>
            </systemPropertyVariables>
          </configuration>
          <executions>
            <execution>
              <goals>
                <goal>integration-test</goal>
                <goal>verify</goal>
              </goals>
            </execution>
          </executions>
        </plugin>

        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-resources-plugin</artifactId>
          <version>3.3.1</version>
          <configuration>
            <nonFilteredFileExtensions>
              <nonFilteredFileExtension>p12</nonFilteredFileExtension>
              <nonFilteredFileExtension>crt</nonFilteredFileExtension>
              <nonFilteredFileExtension>pem</nonFilteredFileExtension>
            </nonFilteredFileExtensions>
          </configuration>
        </plugin>

        <!-- LICENSE PLUGIN -->
        <plugin>
          <groupId>com.mycila</groupId>
          <artifactId>license-maven-plugin</artifactId>
          <version>${plugin.version.license}</version>
          <configuration>
            <header>${license.header}</header>
            <includes>
              <include>**/*.java</include>
            </includes>
            <mapping>
              <java>SLASHSTAR_STYLE</java>
            </mapping>
          </configuration>
          <executions>
            <execution>
              <id>add-license</id>
              <goals>
                <goal>format</goal>
              </goals>
              <phase>compile</phase>
            </execution>
          </executions>
        </plugin>

        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-dependency-plugin</artifactId>
          <version>${plugin.version.dependency}</version>
          <!-- To run with Java 11 - https://issues.apache.org/jira/browse/MDEP-613-->
          <dependencies>
            <dependency>
              <groupId>org.apache.maven.shared</groupId>
              <artifactId>maven-dependency-analyzer</artifactId>
              <version>${plugin.version.dependency-analyzer}</version>
            </dependency>
          </dependencies>

          <executions>
            <execution>
              <id>analyze-dependencies</id>
              <goals>
                <goal>analyze-only</goal>
              </goals>
              <!-- The analyze-only goal assumes that the test-compile phase has been executed -->
              <phase>verify</phase>
              <configuration>
                <failOnWarning>true</failOnWarning>
                <outputXML>true</outputXML>
                <!-- dependencies not directly used in all projects during tests -->
                <ignoredUnusedDeclaredDependencies combine.children="append">
                  <dep>org.apache.logging.log4j:log4j-slf4j2-impl</dep>
                  <dep>org.apache.logging.log4j:log4j-core</dep>
                  <dep>io.camunda:zeebe-build-tools</dep>
                  <dep>io.camunda:zeebe-gateway-protocol</dep>
                  <dep>org.ow2.asm:asm</dep>
                  <dep>org.bouncycastle:bcpkix-jdk18on</dep>
                  <dep>org.bouncycastle:bcprov-jdk18on</dep>
                  <dep>org.junit.jupiter:junit-jupiter-engine</dep>
                  <dep>org.junit.vintage:junit-vintage-engine</dep>
                  <dep>com.tngtech.archunit:archunit-junit5-engine</dep>
                  <dep>org.openjdk.jmh:jmh-generator-annprocess</dep>
                  <dep>org.postgresql:postgresql</dep>
                </ignoredUnusedDeclaredDependencies>
                <ignoredNonTestScopedDependencies>
                  <dep>org.elasticsearch:elasticsearch-x-content</dep>
                </ignoredNonTestScopedDependencies>
              </configuration>
            </execution>
          </executions>
        </plugin>
      </plugins>
    </pluginManagement>

    <plugins>
      <plugin>
        <groupId>org.sonatype.plugins</groupId>
        <artifactId>nexus-staging-maven-plugin</artifactId>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-dependency-plugin</artifactId>
      </plugin>
    </plugins>

  </build>

  <profiles>
    <profile>
      <id>operateItStage1</id>
      <properties>
        <includeITNames>**/*IT.java</includeITNames>
        <excludeITNames>**/*ZeebeIT.java, **/*ZeebeImportIT.java, **/OpenSearch*IT.java, **/Opensearch*IT.java</excludeITNames>
        <failsafeForkCount>1</failsafeForkCount>
      </properties>
    </profile>

    <profile>
      <id>operateItStage2</id>
      <properties>
        <includeITNames>**/*ZeebeIT.java</includeITNames>
        <excludeITNames>none</excludeITNames>
        <failsafeForkCount>1</failsafeForkCount>
        <skipSurefire>true</skipSurefire>
      </properties>
    </profile>

    <profile>
      <id>operateItImport</id>
      <properties>
        <includeITNames>**/*ZeebeImportIT.java</includeITNames>
        <excludeITNames>none</excludeITNames>
        <failsafeForkCount>1</failsafeForkCount>
        <skipSurefire>true</skipSurefire>
      </properties>
    </profile>

    <profile>
      <!--
        We have to skip spotbugs analysis until Operate team have fixed several findings
        See https://github.com/camunda/zeebe/issues/17331
      -->
      <id>spotbugs</id>
      <build>
        <plugins>
          <plugin>
            <groupId>com.github.spotbugs</groupId>
            <artifactId>spotbugs-maven-plugin</artifactId>
            <version>${plugin.version.spotbugs}</version>
            <configuration>
              <skip>true</skip>
            </configuration>
          </plugin>
        </plugins>
      </build>
    </profile>

    <!-- 
      The QA module is enabled per default, but having it in a profile allows us to exclude it easily.
      That is useful for example for creating releases.
       -->
    <profile>
      <id>integration-tests</id>
      <activation>
        <activeByDefault>true</activeByDefault>
      </activation>
      <modules>
        <module>qa</module>
      </modules>
    </profile>
  </profiles>
</project>
